--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Solo Project</title>
   </head>
   <body>
-    <h1>Book Nerd!</h1>
+    <h1>Book Shelf</h1>
     <div id="root"></div>
 
     <script src="build/bundle.js"></script>
