--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Solo Project</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <h1>Book Shelf</h1>
