--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Solo Project</title>
+    <title>Bookshelf</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
