--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Bookshelf</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bookshelf.AI</title>
   </head>
   <body>
     <div id="root"></div>
-
-    <script src="build/bundle.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
