--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <title>Bookshelf</title>
     <link rel="stylesheet" href="index.css" />
+    <base href="/" />
   </head>
   <body>
     <div id="root"></div>
