--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="root"></div>
 
-    <script src="build/bundle.js"></script>
+    <!-- <script src="build/bundle.js"></script> -->
+    <script type="module" src="/client/index.jsx"></script>
   </body>
 </html>
